--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -37,4 +37,5 @@
 @import "refills/grid-items";
 @import "refills/grid-items-lines";
 @import "refills/comment";
-@import "refills/article";
+@import "refills/article-open-vollkorn";
+@import "refills/article-2";
